Add French Translation

--- a/app/src/main/res/values/animals.xml
+++ b/app/src/main/res/values/animals.xml
@@ -3,7 +3,7 @@
     <string-array name="animals_array">
         <item>Bird</item>
         <item>Cat</item>
-        <item>Cow</item>
+        <item>Pig</item>
         <item>Dog</item>
         <item>Fish</item>
         <item>Snake</item>
